--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 openai==1.12.0
 langchain==0.1.6
+langchain-community==0.0.20
 streamlit==1.31.0
 pypdf==4.0.1
-chromadb==0.4.22
+sentence-transformers==2.3.1
+faiss-cpu==1.7.4
